feat(docs): enhance Swagger documentation for dashboard, products, roles, sales, and user modules
